--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,14 @@
 fancyss Changelog
 ===========================================
+custom:
+3.3.6
+   - fix	在规则更新时当所有规则文件不存在时的判断ss_rule_update.sh:27
+   - fix	生成域名白名单时的重复内容
+   - fix	自定义dns时输入框被隐藏
+   - fix	订阅时每天的设定和星期天冲突
+
+===========================================
+
 3.3.6 (to be released)
    - fix	修复通过vless://链接添加节点时候，在grpc模式下，serviceName可能漏掉添加的问题
    - fix	修复xray在底层传输安全为reality时候，有时因错误提交了flow参数导致节点不可用的问题
